linux-raspberrypi: add in seeed voicecard dtoverlays
Extend linux-raspberrypi to add in all the seeed voicecard dtoverlays.

Signed-off-by: Ming Liu <liu.ming50@gmail.com>

--- a/layers/meta-balena-raspberrypi/conf/layer.conf
+++ b/layers/meta-balena-raspberrypi/conf/layer.conf
@@ -132,6 +132,9 @@ KERNEL_DEVICETREE_append = " \
     overlays/vga666.dtbo \
     overlays/waveshare-sim7600.dtbo \
     overlays/wittypi.dtbo \
+    overlays/seeed-2mic-voicecard.dtbo \
+    overlays/seeed-4mic-voicecard.dtbo \
+    overlays/seeed-8mic-voicecard.dtbo \
 "
 
 KERNEL_DEVICETREE_append_fincm3 = " overlays/balena-fin.dtbo"
