local.conf.sample: install seeed-voicecard related packages
Signed-off-by: Ming Liu <liu.ming50@gmail.com>

--- a/layers/meta-balena-raspberrypi/conf/samples/local.conf.sample
+++ b/layers/meta-balena-raspberrypi/conf/samples/local.conf.sample
@@ -86,3 +86,5 @@ BB_DISKMON_DIRS = "\
 CONF_VERSION = "1"
 
 HOSTTOOLS += "docker iptables"
+
+IMAGE_INSTALL_append = " seeed-voicecard seeed-voicecard-module"
