local.conf.sample: build development image by default
Signed-off-by: Ming Liu <liu.ming50@gmail.com>

--- a/layers/meta-balena-raspberrypi/conf/samples/local.conf.sample
+++ b/layers/meta-balena-raspberrypi/conf/samples/local.conf.sample
@@ -87,4 +87,6 @@ CONF_VERSION = "1"
 
 HOSTTOOLS += "docker iptables"
 
+# Customized variables
+DEVELOPMENT_IMAGE = "1"
 IMAGE_INSTALL_append = " seeed-voicecard seeed-voicecard-module"
