local.conf.sample: add in i2c-tools and packagegroup-core
They are needed by seeed-voicecard auto-detecting.

Signed-off-by: Ming Liu <liu.ming50@gmail.com>

--- a/layers/meta-balena-raspberrypi/conf/samples/local.conf.sample
+++ b/layers/meta-balena-raspberrypi/conf/samples/local.conf.sample
@@ -89,4 +89,4 @@ HOSTTOOLS += "docker iptables"
 
 # Customized variables
 DEVELOPMENT_IMAGE = "1"
-IMAGE_INSTALL_append = " seeed-voicecard seeed-voicecard-module"
+IMAGE_INSTALL_append = " seeed-voicecard seeed-voicecard-module packagegroup-base i2c-tools"
